--- a/literature/theory/thery.tex
+++ b/literature/theory/thery.tex
@@ -103,5 +103,27 @@ Specifically, they exit if \(\theta_{t+1}<\underline{\theta} _{FL}(Z_{t+1})\), w
 _{FL}(Z_{t+1})\) is defined as the value
 for which \(\widehat{V}_{FL}(\underline{\theta}_{FL},Z_{t+1})=0\).
 
+\subsection{The economy with credit market frictions}
+After the production the transitory shock \(\epsilon\) is privately observed by the firm, whereas the financial
+intermediaries can observe only at cost \(\mu k^\alpha\). Considering one period debt contract the financial
+intermediary observe \(\epsilon\) only if the firm fails, thus when the private shock is not enough to repays its debt.
+The terms of the financial contract depends on the value of the ﬁrm's net worth\(e\), on its current productivity \(\theta\), and on the value of
+aggregate productivity \(Z\), all observable by the financial intermediary and the ﬁrm at zero
+cost. 
+\par
+HP1: The risk-free interest rate is \(\beta<\frac{1}{1+r}\) \\
+Thus the risk-free rate is lower in an economy with credit frictions than in the frictionless one, and garantess  that
+firm do not always reinvest their profits.
+When a ﬁrm is not able to reimburse its debt,
+it defaults. In this case, the ﬁnancial intermediary pays a cost to verify the ﬁrm's income
+and conﬁscates all the ﬁrm's income. The default threshold \(\overline{\epsilon} \)is given by:
+\[Z(\theta+\overline{\epsilon} )k^\alpha +(1-\sigma)k = (1+r)(c+k+e)\]
+Default leads to a zero net worth but does not necessarily lead to the exit of the ﬁrm
+as observed empirically. Depending on its persistent productivity component \(\theta\), the ﬁrm
+could ﬁnd proﬁtable to stay in the market with zero net worth.
+The ﬁnancial intermediary lends (c + k -e) to the ﬁrm only if its expected income from
+the loan is equal to the opportunity cost of the funds. 
+\[(1+r)(k+c+e)(1-\Phi(\overline{\epsilon}))+\int_{-\infty}^{\overline{\epsilon}}[Z(\theta+\overline{\epsilon} )k^\alpha
++(1-\sigma)k-mu k^\alpha]  \,d\Phi(\epsilon)\geq (1+r)(c+k+e) \]
 
 \end{document}
