--- a/literature/theory/thery.tex
+++ b/literature/theory/thery.tex
@@ -8,6 +8,7 @@
 % Replace `letterpaper' with `a4paper' for UK/EU standard size
 \usepackage[letterpaper,top=2cm,bottom=2cm,left=3cm,right=3cm,marginparwidth=1.75cm]{geometry}
 
+
 % Useful packages
 \usepackage{amsmath}
 \usepackage{graphicx}
@@ -28,36 +29,41 @@
 \end{abstract}
 
 \section[short]{Theoretical framework}
-The economy consists of firms that are risk-neutral and have a constant discount rate represented by the parameter $0 <
-\beta < 1$. These firms exhibit heterogeneity in terms of their productivity and net worth. They utilize a production
-technology that takes capital (or production units) as the sole input, with diminishing returns to scale. 
-\par
-In each period, firms incur a fixed production cost denoted as $c$ to initiate production. Following production, firms
-make decisions regarding the allocation of profits for the next period. The remaining portion of profits is invested in
-a risk-free asset. Firms face a choice: they can either remain in the market and reinvest their profits or exit the
-market entirely, investing their entire net worth, denoted as $e$, in the risk-free asset. 
-\par
-When firms choose to exit the market, they forgo any future profits, but they also free themselves from the financial
-burden of the fixed cost represented by $c$. Consequently, firms opt to exit the market when the expected profits fail
-to outweigh the fixed cost, or when the value of production becomes inferior to the value they could gain by investing
-in the risk-free asset.
-\par
-This value, obtained from investing in the risk-free asset, is equal to $q_t +
-\sum_{s=0}^{+\infty}\beta^s[\beta(1+r)-1]e_{t+s+1}$. Notably, when the condition $\beta(1+r) \leq 1$ holds true, this
-value simplifies to $q$. In such cases, firms are either indifferent regarding the timing of dividend distributions or
-have a preference for distributing their end-of-period net worth to shareholders or investors.
+The economy comprises risk-neutral firms with a constant discount rate represented by $0 < \beta < 1$. These firms
+exhibit heterogeneity in productivity and net worth. They employ a production technology that relies solely on capital
+(or production units) as input, featuring diminishing returns to scale.
+\\
+In each period, firms incur a fixed production cost denoted as $c$ to initiate production. After production, they decide
+how to allocate profits for the next period. The remaining profits are invested in a risk-free asset. Firms face a
+choice: they can either continue operating and reinvest their profits or exit the market, investing their entire net
+worth, denoted as $e$, in the risk-free asset.
+\\
+Firms opt to exit the market when expected profits no longer outweigh the fixed cost $c$, or when the value of
+production becomes inferior to the value they could gain by investing in the risk-free asset.
+\\
+The value obtained from investing in the risk-free asset is given by:
+\[
+q_t + \sum_{s=0}^{+\infty}\beta^s[\beta(1+r)-1]e_{t+s+1}.
+\]
 
-\par
-The agents in this economy are the firms themselves, and they aim to maximize their value over time by selecting an
-optimal level of capital denoted as $k$. The production function, after accounting for the fixed cost $c$, can be
-expressed as follows: $Y = Z(\theta + \epsilon)k^\alpha$.
+Notably, when the condition $\beta(1+r) \leq 1$ holds, this value simplifies to $q$. In such cases, firms are either
+indifferent regarding the timing of dividend distributions or have a preference for distributing their end-of-period net
+worth to shareholders or investors.
+\\
+In this economic model, the agents are the firms themselves, aiming to maximize their value over time by selecting an
+optimal level of capital denoted as $k$. The production function, accounting for the fixed cost $c$, is expressed as
+follows: $Y = Z(\theta + \epsilon)k^\alpha$.
+\\
+Key variables include:
 \begin{itemize}
-    \item $Z$: is the stochastic aggregate productivity common across firms 
-    \item $\theta$: is a persistent firm-specific productivity shock (model as a Markov Chain)     
-    \item $\epsilon$: is the firm-specific productivity shock $\epsilon\sim\mathcal{N}(0,\sigma ) $
-    \item $k^\alpha$: capital or production units as in (Caballero Hammour, AER)
+    \item $Z$: Stochastic aggregate productivity common across firms.
+    \item $\theta$: Persistent firm-specific productivity shock (modeled as a Markov Chain).
+    \item $\epsilon$: Firm-specific productivity shock with $\epsilon \sim \mathcal{N}(0,\sigma)$.
+    \item $k^\alpha$: Capital or production units, as in Caballero and Hammour (AER).
 \end{itemize}
-The timeline of the events is the following
+
+The timeline of events is as follows:
+
 \begin{figure}[h]
     \centering
     \begin{tikzpicture}
@@ -68,27 +74,25 @@ The timeline of the events is the following
         \foreach \x/\label in {0,1, 2,3, 4, 5} {
             \node[align=center, below] at (\x,0) {\label};
         }
-        
-        
     \end{tikzpicture}
     \caption{Timeline of Events}
 \end{figure}
+
+The sequence of events includes:
 \begin{enumerate}
-    \item firm knows \(Z,\theta,k^\alpha,e\) where $e$ is its endowment\footnote{which is different from $k$ since the
-    firm can borrow money: \(d=c+k-e\) where $d$ stays for debt} 
-    \item firm compute the $k$ need to maximizes the expected value of the firm range can varies from \([0,+\infty]\) if
-    $k=0$ it means that the firm decide to exit.
-    \item at the end of the period the firm observe \(\epsilon_{t}\) and the aggregate shock
-    \item repays its debt and the fixed operating cost \(c+k-e\), the firm its left with the end of period net worth $q$
-    \item decide the amount the dividend to distribute \(q-e_{t+1}\) observe the productivity shock \(\theta_{t+1},
-    Z_{t+1}\) and the step restart from 1
+    \item The firm possesses knowledge of $Z,\theta,k^\alpha,e$ (where $e$ represents its endowment, different from $k$ since the firm can borrow money with $d=c+k-e$).
+    \item The firm computes the optimal $k$ to maximize the expected value of the firm, with $k$ ranging from $[0,+\infty]$. If $k=0$, it indicates the firm's decision to exit.
+    \item At the end of the period, the firm observes $\epsilon$ and the aggregate shock.
+    \item The firm repays its debt and the fixed operating cost $(c+k-e)$, resulting in an end-of-period net worth $q$.
+    \item The firm decides on the amount of dividends to distribute $(q-e')$, observes the productivity shock $\theta', Z'$, and the process restarts from step 1.
 \end{enumerate}
+
 \subsection{Frictionless economy}
 In a frictionless economy, firms have the option to borrow an amount denoted as \(c+k-e\) at the risk-free interest rate
 \(r=\frac{1}{\beta}-1\). Therefore, at the start of the period, the firm's value is determined by the following
 expression:
 
-\[V_{FL} = \max_{k} E \int \max[q,\max_{e_{t+1}}(q - e_{t+1} + \beta V_{FL}(e_{t+1},\theta_{t+1}, Z_{t+1}))]  \,d\Phi
+\[V_{FL} = \max_{k} E \int \max[q,\max_{e'}(q - e' + \beta V_{FL}(e',\theta', Z'))]  \,d\Phi
 (\epsilon) \]
 where the end of period net worth is equal to:
 \[q=Z(\theta+\epsilon)k^\alpha + (1-\delta )k-(1+r)(c+k-e)\]
@@ -96,34 +100,104 @@ where the end of period net worth is equal to:
 Under the condition of survival, it can be demonstrated that:
 
 \[\widehat{V}_{FL}(\theta,Z) = \max_{k}E\int[Z(\theta+\epsilon)k^\alpha - (1+r)c\,d\Phi (\epsilon)] +
-\beta\max[0,\widehat{V}_{FL}(\theta_{t+1},Z_{t+1})]\]
+\beta\max[0,\widehat{V}_{FL}(\theta',Z')]\]
 
 In the absence of market frictions, firms choose to exit when their productivity reaches a certain threshold.
-Specifically, they exit if \(\theta_{t+1}<\underline{\theta} _{FL}(Z_{t+1})\), where \(\underline{\theta}
-_{FL}(Z_{t+1})\) is defined as the value
-for which \(\widehat{V}_{FL}(\underline{\theta}_{FL},Z_{t+1})=0\).
+Specifically, they exit if \(\theta'<\underline{\theta} _{FL}(Z')\), where \(\underline{\theta}
+_{FL}(Z')\) is defined as the value
+for which \(\widehat{V}_{FL}(\underline{\theta}_{FL},Z')=0\).
 
-\subsection{The economy with credit market frictions}
-After the production the transitory shock \(\epsilon\) is privately observed by the firm, whereas the financial
-intermediaries can observe only at cost \(\mu k^\alpha\). Considering one period debt contract the financial
-intermediary observe \(\epsilon\) only if the firm fails, thus when the private shock is not enough to repays its debt.
-The terms of the financial contract depends on the value of the ﬁrm's net worth\(e\), on its current productivity \(\theta\), and on the value of
-aggregate productivity \(Z\), all observable by the financial intermediary and the ﬁrm at zero
-cost. 
+\subsection{Economy with Credit Market Frictions}
+
+After production, the firm privately observes the temporary shock $\epsilon$, while financial intermediaries can only
+observe it at a cost of $\mu k^\alpha$. For one-period debt contracts, financial intermediaries observe $\epsilon$ only
+if the firm faces financial distress, which occurs when the private shock is insufficient to repay its debt. The terms
+of the financial contract depend on the firm's net worth $e$, current productivity $\theta$, and aggregate productivity
+value $Z$, all observable by both the financial intermediary and the firm at no additional cost.
+
+\textbf{HP1 (Hypothesis 1):} The risk-free interest rate is $\beta < \frac{1}{1+r}$, which implies a lower risk-free
+rate in an economy with credit frictions compared to a frictionless one. It also ensures that firms do not always
+reinvest their profits.
+
+When a firm defaults, the financial intermediary incurs verification costs and seizes all of the firm's income. The
+default threshold $\overline{\epsilon}$ is determined by the equation:
+\[
+Z(\theta+\overline{\epsilon})k^\alpha + (1-\delta)k = (1+\widetilde{r} )(c+k+e)
+\]
+
+Default results in a zero net worth but does not necessarily force the firm to exit the market, depending on its
+persistent productivity component $\theta$.
+
+The financial intermediary lends $(c + k - e)$ to the firm only if the expected income from the loan equals the
+opportunity cost of the funds, as expressed by the inequality:
+\[
+(1+\widetilde{r} )(k+c+e)(1-\Phi(\overline{\epsilon}))+\int_{-\infty}^{\overline{\epsilon}}[Z(\theta+\overline{\epsilon})
+k^\alpha+(1-\delta)k-\mu k^\alpha] \,d\Phi(\epsilon) \geq (1+r)(c+k+e)
+\]
+
+The financial contract is characterized by $(k,\overline{\epsilon})$. Given $Z,\theta,e$, the participation constraint
+indicates the default threshold $\overline{\epsilon}$ required by the financial intermediary to lend a given amount. For
+some firms, their net worth is too low for the participation constraint of the financial intermediary to be satisfied.
+In fact, given $\theta, Z$, there is a unique threshold $e_b(\theta,Z)$ below which the financial intermediary
+refuses to lend any amount:
+\[
+Z[\theta+G(\overline{\epsilon}_b )]k^\alpha+(1-\delta)k-uk_b^\alpha\Phi (\overline{\epsilon}_b)=(1+r)(k_b+c-\underline{e_b})
+\]
+where $\overline{\epsilon}_b$ maximizes the expected income of the financial intermediary. When the firm has a net worth
+below $\underline{e_b}$, the firm defaults.
+
+After production, the firm's end-of-period net worth is equal to:
+\[
+q = \begin{cases}
+  Z(\theta+\overline{\epsilon})k^\alpha +(1-\delta)k-(1+\widetilde{r})(k+c-e) & \text{if } \epsilon\geq \overline{\epsilon} \\
+  0 & \text{otherwise}
+\end{cases}
+\]
+Using the default condition we can rewrite as 
+\[q = \max[Zk^\alpha(\epsilon-\overline{\epsilon});0]\]
+
+\subsection{The firm's problem}
+Define $V$ as the firm's value at the start of the period, which hinges on investment outcomes and exit decisions. If
+the end-of-period net worth falls below a threshold ($q < e_b(\theta', Z')$), the firm exits. Otherwise, it compares its
+continuing value to the end-of-period net worth ($q \geq e_b(\theta', Z')$) and exits if the continuing value is lower.
+
+The firm's value function is given by:
+\[
+V(e,\theta,Z) = \max_{(k,\overline{\epsilon})}E\left\{\int I(q)q + (1-I(q))\max[q,\max_{e'}q-e'+\beta V(e',\theta',
+\zeta')]\,d\Phi(\epsilon)\right\}
+\]
+
+Where:
+\[
+I(q)=
+\begin{cases}
+    0 & \text{if } q\geq e_b(\theta', Z')\\
+    1 & \text{if } q< e_b(\theta', Z')
+\end{cases}
+\]
+
+Subject to the following constraints:
+\begin{enumerate}
+    \item \label{con1}\[
+    Z[\theta+G(\overline{\epsilon}_b )]k^\alpha+(1-\delta)k-uk_b^\alpha\Phi (\overline{\epsilon}_b)\geq(1+r)(k_b+c-
+    \underline{e_b})
+    \]
+    \item \label{con2} \[
+    q = \max[Zk^\alpha(\epsilon-\overline{\epsilon});0]
+    \]
+    \item \label{con3}\[
+    \overline{e_b}(\theta',Z)\leq e'\leq q
+    \]
+\end{enumerate}
+
+The firm aims to maximize expected dividends while complying with the financial intermediary's participation constraint
+(constraint \ref{con1}). Equation (constraint \ref{con2}) characterizes the firm's end-of-period net worth, and
+Equation (constraint \ref{con3}) ensures that the
+net worth
+is sufficiently high to satisfy the participation constraint.
 \par
-HP1: The risk-free interest rate is \(\beta<\frac{1}{1+r}\) \\
-Thus the risk-free rate is lower in an economy with credit frictions than in the frictionless one, and garantess  that
-firm do not always reinvest their profits.
-When a ﬁrm is not able to reimburse its debt,
-it defaults. In this case, the ﬁnancial intermediary pays a cost to verify the ﬁrm's income
-and conﬁscates all the ﬁrm's income. The default threshold \(\overline{\epsilon} \)is given by:
-\[Z(\theta+\overline{\epsilon} )k^\alpha +(1-\sigma)k = (1+r)(c+k+e)\]
-Default leads to a zero net worth but does not necessarily lead to the exit of the ﬁrm
-as observed empirically. Depending on its persistent productivity component \(\theta\), the ﬁrm
-could ﬁnd proﬁtable to stay in the market with zero net worth.
-The ﬁnancial intermediary lends (c + k -e) to the ﬁrm only if its expected income from
-the loan is equal to the opportunity cost of the funds. 
-\[(1+r)(k+c+e)(1-\Phi(\overline{\epsilon}))+\int_{-\infty}^{\overline{\epsilon}}[Z(\theta+\overline{\epsilon} )k^\alpha
-+(1-\sigma)k-mu k^\alpha]  \,d\Phi(\epsilon)\geq (1+r)(c+k+e) \]
+Furthermore, the firm is prohibited from issuing new shares and can only augment its net worth by reinvesting profits.
+This limitation presents a trade-off: increasing capital boosts production capacity but also raises the risk of default,
+as the default threshold set by the financial intermediary increases with borrowed amounts.
 
 \end{document}
