caballero papers added in theory

--- a/literature/theory/solving.tex
+++ b/literature/theory/solving.tex
@@ -22,6 +22,7 @@
 
 \begin{document}
 \maketitle
+\section{Frictionless economy}
 
 Given that the evolution of the net worth is the following:
 \[e_{t+1} = Z(\theta +\epsilon)k_t^\alpha + (1-\delta )k_t - (1+r)(c+k_t-e_t)\]
@@ -31,30 +32,74 @@ The value of the firm at time t is given by:
 Solving the belman equation, the FOC are given by:
 \[\frac{\vartheta V_t(e_t)}{\vartheta k_t } =\frac{\vartheta e_t}{\vartheta k_t } +
  \beta \frac{\vartheta V_{t+1}(e_{t+1})}{\vartheta k_t } \]
+Strong assumption a change in \(k_t\) does not have an impact on \(e_t\) only on \(e_{t+1}\):
 \[\frac{\vartheta e_t}{\vartheta k_t} = 0\]
 Using the envelope theorem:
 \[\frac{\vartheta
 V_{t+1}(e_{t+1})}{\vartheta k_t } = \frac{\vartheta
 V_{t+1}(e_{t+1})}{\vartheta e_{t+1} }\frac{\vartheta e_{t+1}}{\vartheta k_t}\]
-\[\frac{\vartheta V_{t+1}(e_{t+1})}{\vartheta e_{t+1} } = \beta(1+r)\]
-\[\frac{\vartheta e_{t+1}}{\vartheta k_t} = Z(\theta +\epsilon)\alpha k_t^{1-\alpha}
+\[\frac{\vartheta V_{t+1}(e_{t+1})}{\vartheta e_{t+1} } =1 + \beta(1+r)\]
+\[\frac{\vartheta e_{t+1}}{\vartheta k_t} = Z(\theta +\epsilon)\alpha k_t^{\alpha-1}
 -(\delta + r)\]
 Thus:
 \[\frac{\vartheta V_{t+1}(e_{t+1})}{\vartheta k_t } = 
-\beta(1+r) Z(\theta +\epsilon)\alpha k_t^{1-\alpha}-(\delta + r) \]
+[1+\beta(1+r)] [Z(\theta + \epsilon)\alpha k_t^{\alpha-1}-(\delta + r)] \]
 So the FOC became:
-\[\frac{\vartheta V_t(e_t)}{\vartheta k_t } = 0 + \beta [ k_t^{1-\alpha}-(\delta + r)] = 0 \]
+\[\frac{\vartheta V_t(e_t)}{\vartheta k_t } = 0 + \beta [1+\beta(1+r)] [Z(\theta + \epsilon)\alpha
+k_t^{\alpha-1}-(\delta + r)]  = 0 \]
 The optimal level of capital at time t is:
-\[\widehat{k} _t= {\frac{\delta + r}{\beta(1+r) Z(\theta +\epsilon)\alpha}}^{\frac{1}{1-\alpha}} \]
+\[\widehat{k} _t= {\frac{\beta(1+r) Z(\theta +\epsilon)\alpha}{\delta + r}}^{\frac{1}{1-\alpha}} \]
 Plotting the graph in (assuming \(X=Z(\theta +\epsilon)\)) and \(y=\widehat{k} _t\)
-\[ y={\frac{0.03+0.1}{0.8 x}}^{\frac{1}{1-0.8}}\]
+\[ y={\frac{0.8 x}{0.03+0.1}}^{\frac{1}{1-0.8}}\]
 
 \begin{figure}
     \centering
-    \includegraphics[scale = 0.4]{K.png}
+    \includegraphics[scale = 0.8]{K.png}
     \caption{\(X=Z(\theta +\epsilon)\) and \(y=\widehat{k} _t\) }
     \label{plot:k_static}
 \end{figure}
-Its interesting to see that if there is an increase in productivity the firm need less optimal capital K, while the most
-low productivity firms need more capital to operate 
+Its interesting to see that if there is an increase in productivity the firm need more optimal capital K, while the most
+low productivity firms need less capital to operate 
+
+
+\subsection{Frictions}
+Now I consider the participation constraint of the borrower given that she could observe \(\epsilon\) only paying \(\mu
+k^\alpha\) so:
+\[
+ (1+r )(k+c+e)(1-\Phi(\overline{\epsilon}))+\int_{-\infty}^{\overline{\epsilon}}[Z(\theta+\overline{\epsilon})
+k^\alpha+(1-\delta)k-\mu k^\alpha] \,d\Phi(\epsilon) \geq (1+r)(c+k+e)
+ \]
+\(r\) is the rate of interest that makes equal the expected value of borrowing to the opportunity cost of capital.
+rewriting became 
+\[
+Z[\theta+G(\overline{\epsilon} )]k_t^\alpha+(1-\delta)k_t-uk_t^\alpha\Phi (\overline{\epsilon})=(1+r)(k_t+c-e_t)
+\]
+where
+\[G(\overline{\epsilon} )= (1-\Phi(\varepsilon )\overline{\varepsilon }
++\int_{-\infty}^{\overline{\varepsilon}}\epsilon\,d \Phi(\epsilon) )\]
+While the firm participation constraint is \(q_t \geq 0 \) so the end-of-period net worth must be greater than 0, thus
+the problem of the firm becomes:
+The value of the firm at time t is given by:
+\[V_t(e_t) =\max_{k_t}  q_t - e_{t+1} + \beta V_{t+1}(e_{t+1})\]
+\[s.t.\]
+\[q_{t} = Z(\theta +\epsilon)k_t^\alpha + (1-\delta )k_t - (1+r)(c+k_t-e_t)\]
+\[
+Z[\theta+G(\overline{\epsilon} )]k_t^\alpha+(1-\delta)k_t-uk_t^\alpha\Phi (\overline{\epsilon})=(1+r)(k_t+c-e_t)
+\]
+so we can rewrite the second constraint in order to get \(r\):
+\[r = \frac{Z[\theta+G(\overline{\epsilon} )]k_t^\alpha+(1-\delta)k_t-uk_t^\alpha\Phi (\overline{\epsilon})}{k_t+c-e_t}-1\]
+FOC:
+\[\frac{\vartheta
+V_{t}(e_{t})}{\vartheta k_t } = \frac{\vartheta
+q_{t}}{\vartheta k_t } - \frac{\vartheta
+e_{t}}{\vartheta k_t } + \beta \frac{\vartheta
+V_{t+1}(e_{t+1})}{\vartheta k_{t} } = 0\]
+by envelope theorem:
+\[\frac{\vartheta
+V_{t+1}(e_{t+1})}{\vartheta k_{t} } = \frac{\vartheta
+V_{t+1}(e_{t+1})}{\vartheta e_{t+1} }\frac{\vartheta e_{t+1}}{\vartheta k_t}\]
+Strong HP: \[\frac{\vartheta e_{t+1}}{\vartheta k_t} = 0\]
+Qui non so se ha senso continuare perchè non ho nessun meccanismo che mi trasformi il net worth al tempo t in net worth
+al periodo t+1, almeno che non includa la definzione di dividendo come \(d_t= q_t-e_{t+1}\), allora in questo caso
+dovrei risolvere il problema con un langrangiana dato che la firm dovrebbe scegliere sia \(k\) che \(e\) net worth.
 \end{document}
