--- a/literature/theory/solving.tex
+++ b/literature/theory/solving.tex
@@ -122,12 +122,12 @@ k_{t+1}(1-\delta) \]
 FOC:
 \[\frac{\partial V_{t+2}}{\partial e_{t+2}} = Z \alpha (e_{t+2} - c)^{\alpha-1} - 1 = 0\]
 \[ (e_{t+2} - c)^{\alpha-1}= (Z \alpha)^{-1}\]
-\[ e_{t+2} = (Z \alpha)^{\frac{-1}{\alpha-1}}+c\]
+\[ e_{t+2} = (Z \alpha)^{\frac{1}{1-\alpha}}+c\]
 Thus:
-\[d_{t+2} = Z\left[(Z \alpha)^{\frac{-1}{\alpha-1}}+c\right]  - B_{t+1}R_{t+1} -  \left[(Z
-\alpha)^{\frac{-1}{\alpha-1}}+c\right] + k_{t+1}(1-\delta) \]
-\[V_{t+2} = Z\left[(Z \alpha)^{\frac{-1}{\alpha-1}}+c\right]  - B_{t+1}R_{t+1} -  \left[(Z
-\alpha)^{\frac{-1}{\alpha-1}}+c\right] + k_{t+1}(1-\delta)\] 
+\[d_{t+2} = Z\left[(Z \alpha)^{\frac{\alpha}{1-\alpha}}\right]  - B_{t+1}R_{t+1} -  \left[(Z
+\alpha)^{\frac{1}{1-\alpha}}\right] + k_{t+1}(1-\delta) \]
+\[V_{t+2} = Z\left[(Z \alpha)^{\frac{\alpha}{1-\alpha}}\right]  - B_{t+1}R_{t+1} -  \left[(Z
+\alpha)^{\frac{1}{1-\alpha}}\right] + k_{t+1}(1-\delta) \]
 Writing the problem in t+1:
 \[V_{t+1} = \max_{e_{t+1},k_{t+1}} d_{t+1} + \beta V_{t+2}\]
 \[d_{t+1} = Zk^\alpha_{t+1} - B_t R_L - k_{t+1} + B_{t+1} + k_t(1-\delta)\]
@@ -156,7 +156,7 @@ B_{t+1}\frac{\partial R_{t+1}}{\partial e_{t+1}} \]
 \[\frac{\partial R_{t+1}}{\partial e_{t+1}} = - \frac{1-p}{p}\left\{\left[Z\alpha k^{\alpha-1}_{t+1}\frac{\partial
 k_{t+1}}{\partial e_{t+1}} -\delta \frac{\partial k_{t+1}}{\partial e_{t+1}}\right] B_{t+1} - \left(\frac{\partial
 k_{t+1}}{\partial e_{t+1}} - 1\right) \left[Zk_{t+1}^{\alpha} - \delta k_{t+1}\right]\right\}B_{t+1}^{-2}\]
-\[\frac{\partial B_{t+1}R_{t+1}}{\partial e_{t+1}} = \left[\frac{\partial k_{t+1}}{\partial e_{t+1}}-1 \right] R_{t+1} +
+\[\frac{\partial B_{t+1}R_{t+1}}{\partial e_{t+1}} = \left[\frac{\partial k_{t+1}}{\partial e_{t+1}}-1 \right] R_{t+1}
 - \frac{1-p}{p}\left\{\left[Z\alpha k^{\alpha-1}_{t+1}\frac{\partial
 k_{t+1}}{\partial e_{t+1}} -\delta \frac{\partial k_{t+1}}{\partial e_{t+1}}\right] B_{t+1} - \left(\frac{\partial
 k_{t+1}}{\partial e_{t+1}} - 1\right) \left[Zk_{t+1}^{\alpha} - \delta k_{t+1}\right]\right\}B_{t+1}^{-1}\]
@@ -235,29 +235,34 @@ From this equation, you can isolate \(\frac{\partial e_{t+1}}{\partial k_{t+1}}\
 \frac{1-p}{p}\right]\frac{p}{Z\alpha}\left\{Z\alpha\left[\left(1-\beta\right)-\frac{\beta}{p}\right]\right\}\left(1-\beta
 R_f\right)^{-1} - \beta \left(r_f+\frac{\delta}{p}\right)\left(1-\beta R_f\right)^{-1}\] 
 \[\frac{\partial e_{t+1}}{\partial k_{t+1}} =- \left[\frac{\partial k_{t+1}}{\partial e_{t+1}}\left(1-\beta R_f\right)
-+\delta\frac{1-p}{p}\right]\frac{\beta p +\beta -p}{1-\beta R_f}\]
++\delta\frac{1-p}{p}\right]\frac{\beta p +\beta -p}{1-\beta R_f} - \beta \left(r_f+\frac{\delta}{p}\right)\left(1-\beta
+R_f\right)^{-1} \]
+Fino a qui non ho molti dubbi, mentre il seguente passaggio presenta molti dubbi e secondo me è responsabile del segno
+negativo del capitale. Tuttavia non mi è venuto in mente altro modo per procedere.
 Knowing that \(B = k + c - e \rightarrow e= B -k -c\) thus \(\frac{\partial e_{t+1}}{\partial k_{t+1}} = -1\):
-\[ \frac{1-\beta R_f}{\beta p +\beta -p}= \left[\frac{\partial k_{t+1}}{\partial e_{t+1}}\left(1-\beta R_f\right)
+\[  -\beta \left(r_f+\frac{\delta}{p}\right)\left(1-\beta R_f\right)^{-1}\frac{1-\beta R_f}{\beta p +\beta -p}= \left[\frac{\partial k_{t+1}}{\partial e_{t+1}}\left(1-\beta R_f\right)
 +\delta\frac{1-p}{p}\right]\]
 
 
 We can rearrange it to isolate \(\frac{\partial k_{t+1}}{\partial e_{t+1}}\):
 
-\[\frac{1-\beta R_f}{\beta p + \beta - p} - \delta\frac{1-p}{p} = \frac{\partial k_{t+1}}{\partial e_{t+1}}\left(1-\beta
+\[ -\beta \left(r_f+\frac{\delta}{p}\right)\left(\beta p +\beta -p\right) - \delta\frac{1-p}{p} = \frac{\partial k_{t+1}}{\partial e_{t+1}}\left(1-\beta
 R_f\right)\] 
 
 Now, solve for \(\frac{\partial k_{t+1}}{\partial e_{t+1}}\) by dividing both sides by \((1-\beta R_f)\):
 
-\[\frac{\partial k_{t+1}}{\partial e_{t+1}} = \left\{-\delta\frac{1-p}{p} + \frac{1 -\beta R_f }{\beta p + \beta - p}
+\[\frac{\partial k_{t+1}}{\partial e_{t+1}} = \left\{-\beta \left(r_f+\frac{\delta}{p}\right)\left(\beta p +\beta
+-p\right) - \delta\frac{1-p}{p} 
 \right \} \left(1-\beta R_f\right)^{-1}\]
 
 This equation provides the value of \(\frac{\partial k_{t+1}}{\partial e_{t+1}}\) in terms of the given constants
 (\(\beta, R_f, p, \delta\)) and the relationship between \(e_{t+1}\) and \(k_{t+1}\). 
-
-\[k^{\alpha-1}_{t+1}= \left\{-\delta\frac{1-p}{p} + \frac{1 -\beta R_f }{\beta p + \beta - p}
-\right \} \left(1-\beta R_f\right)^{-1} \left(1-\beta R_f\right) + \beta
-\left(r_f+\frac{\delta}{p}\right)\left\{Z\alpha\left[\left(1-\beta\right)-\frac{\beta}{p}\right]\right\}^{-1}\] 
-\[k^{\alpha-1}_{t+1}= \left\{-\delta\frac{1-p}{p} + \frac{1 -\beta R_f }{\beta p + \beta - p}
+\[k^{\alpha-1}_{t+1}=\left[\left\{-\beta \left(r_f+\frac{\delta}{p}\right)\left(\beta p +\beta
+-p\right) - \delta\frac{1-p}{p} 
 \right \} + \beta
-\left(r_f+\frac{\delta}{p}\right)\left\{Z\alpha\left[\left(1-\beta\right)-\frac{\beta}{p}\right]\right\}^{-1}\] 
+\left(r_f+\delta\right) + \delta \frac{1-p}{p}\right]\frac{p}{Z\alpha}\]
+\[k^{\alpha-1}_{t+1}= \left[\left\{-\beta \left(r_f+\frac{\delta}{p}\right)\left(\beta p +\beta
+-p\right) 
+\right \} + \beta
+\left(r_f+\delta\right) \right]\frac{p}{Z\alpha}\]
 \end{document}
